add button functionality to track tears in index.js and update index.html

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <li><p>Pippo</p></li>
     <li><p>Minnie</p></li>
   </ul>
+  <button id="lacrime">lacrime (apri la console che non ho voglia di scrivere altro codice)</button>
 </body>
 
 </html>
